Added image to homepage

--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
     </ol>
     <a href="https://www.example.com">Visit Example.com</a>
     <a href="https://www.trevoirwilliams.com">Visit Trevoir Williams' Website</a>
+    <hr/>
+    <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/2c/78/df/5c/sandals-montego-bay-resort.jpg" alt="Sandals Montego Bay Resort Aerial"/>
 </body>
 </html>
